[Misc] Fix LogCaptureExtension with loggerName
* Remove dependency on org.junit.platform.commons.util.StringUtils;
  use String.isBlank() instead.
* Save and restore previousAdditive alongside previousLevel so that
  a logger whose additivity was already false before the test is not
  accidentally reset to true on cleanup.
* Document in the Javadoc that setting loggerName intentionally isolates
  the logger (additive=false) so that DEBUG logs do not propagate to
  parent loggers or a global LogCaptureExtension in the same test.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>